Fixed footer layout issue

--- a/jamalyzer-client/components/wireframe/Footer.module.css
+++ b/jamalyzer-client/components/wireframe/Footer.module.css
@@ -11,8 +11,8 @@
 
 .footer {
   color: white;
-  text-decoration: none;
   text-align: center;
+  padding: 0 1rem 0 1rem;
 }
 
 .copyright {
@@ -57,8 +57,10 @@
   flex: 1;
 }
 
-.category a:hover {
-  color: var(--secondary-color);
+.category a:hover,
+.category a {
+  text-decoration: none;
+  color: white;
 }
 
 @media (max-width: 1000px) {
@@ -68,6 +70,7 @@
 
   .categories {
     justify-content: center;
+    align-items: center;
     margin-bottom: 1rem;
   }
 }
